# umeshu

./: .hgignore  CMakeLists.txt  LICENSE  ProjectHome.md  TODO  config.h.in
examples/: CMakeLists.txt  umeshu.c
old/: CMakeLists.txt  Doxyfile.in  wscript
old/CMake/: FindGLIB2.cmake
old/examples/: CMakeLists.txt
old/src/: element.c  mesh.c  mesh.h  mesh_delaunay.h  mesh_macros.h  mesh_output.c  mesh_output.h  mesh_relax.h  mesh_smooth.c  mesh_smooth.h  point2.h  polygon.h  predicates.c  predicates_init.c  rounding.h
old/tests/: test_box2.c  test_collapse_edge.c  test_edge.c  test_element.c  test_point2.c  test_polygon.c  test_refine.c  test_relax.c  test_smooth.c
predicates_init/: main.c
src/: box2.c  box2.h  edge.c  edge.h  element.c  element.h  mesh.c  mesh.h  mesh_delaunay.c  mesh_delaunay.h  mesh_macros.h  mesh_output.c  mesh_output.h  mesh_refine.c  mesh_refine.h  mesh_relax.c  mesh_relax.h  mesh_types.h  node.c  node.h  point2.c  point2.h  polygon.c  polygon.h  polygon_triangulate.c  polygon_triangulate.h  predicates.h  rounding.h
tests/: CMakeLists.txt  HDS_test.cpp  Point2_test.cpp  Triangulation_test.cpp  test_collapse_edge.c  test_delaunay.c  test_edge.c  test_element.c  test_mesh.c  test_node.c  test_point2.c  test_refine.c  test_relax.c
umeshu++/: BoundarySegment.cpp  BoundarySegment.h  BoundingBox.cpp  BoundingBox.h  Bounding_box.cpp  Bounding_box.h  Delaunay_mesher.h  Delaunay_triangulation.h  Delaunay_triangulation_items.h  Edge.cpp  Edge.h  ExactAdaptiveKernel.cpp  ExactAdaptiveKernel.h  ExactAdaptiveKernelInit.cpp  ExactAdaptiveKernelInit.h  Exact_adaptive_kernel.cpp  Exact_adaptive_kernel.h  Exact_adaptive_kernel_init.cpp  Exact_adaptive_kernel_init.h  Exceptions.h  Face.cpp  Face.h  FastKernel.cpp  FastKernel.h  Identifiable.h  Mesh.h  Mesh_fwd.h  Mesher.h  Node.cpp  Node.h  Point2.cpp  Point2.h  Polygon.cpp  Polygon.h  Postscript_ostream.cpp  Postscript_ostream.h  Predicates.cpp  Predicates.h  Relaxer.h  Smoother.h  (+6 more)
umeshu++/HDS/: HDS.h  HDS_edge_base.h  HDS_face_base.h  HDS_halfedge_base.h  HDS_items.h  HDS_node_base.h
umeshu++/io/: Postscript_ostream.cpp  Postscript_ostream.h
